fixed to iteration, documentation and added converter pattern annotation